# newton-suite

./: .dockerignore  .env.example  .newton_ledger.json  APP_INVENTORY.md  BiggestMAMA.py  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  Dockerfile  FebReadMe.md  GETTING_STARTED.md  GUMROAD_PRODUCTS.md  GUMROAD_SETUP.md  IOS_APP_BLUEPRINT_2026.md  LICENSE  MIGRATION_COMPLETE.md  PARCRI_NEWTON_WIREFRAME.md  QUICK_DEPLOY.md  README.md  READMEFeb2.md  README_DOCKER.md  TEST_REPORT.md  TINYTALK_BIBLE.md  TINYTALK_PROGRAMMING_GUIDE.md  USAGE_AGREEMENT.md  VALIDATION_REPORT.md  WHITEPAPER.md  __init__.py  api.py  bridge_package.json  commands.py  cyberdog.py  cyberdog_ui.html  docker-compose.yml  index.html  inspector.py  interface_builder_main.py  newton_os_server.py  newton_services.py  (+14 more)
nina/: .gitignore  .vercelignore  ARCHITECTURE.md  BEGINNERS_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEVELOPERS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXAMPLES.md  GETTING_STARTED.md  GLASS_BOX.md  GUMROAD_PRODUCTS.md  MIGRATION_COMPLETE.md  NEVEAUX_CAPITAL_WEBSITE.md  PERFORMANCE_REPORT.md  QUICKSTART.md  QUICK_DEPLOY.md  ROUTING_FIX_SUMMARY.md  RSTUDIO_QUICKSTART.md  TESTING.md  TINYTALK_COMPLETION_SUMMARY.md  TINYTALK_PROGRAMMING_GUIDE.md  TINYTALK_QUICKSTART.md  USER_JOURNEY.md  VERIFICATION_REPORT.md  VIVA_LA_NEWTON.md  WHITEPAPER.md  WINDOWS_SETUP.md  _codeql_detected_source_root  _redirects  api.py  bridge_package.json  calreadme.md  cli_verifier.py  conftest.py  demo_main.py  documentation_summary.txt  (+23 more)
nina/.github/: copilot-instructions.md
nina/adan/: .knowledge_store.json  ada.py  agent.py  benchmark.py  identity.py  knowledge_base.py  knowledge_sources.py  knowledge_store.py  language_mechanics.py  llm_ollama.py  server.py  test_bot.py.disabled  test_integration.py.disabled
nina/adan_portable/: requirements.txt  run.py
nina/api/: index.py
nina/app/: index.html
nina/codehs-course/: BRAINSTORM_logic-distance.md  CONCEPT_its-just-a-calculator.md  CONCEPT_newton-native-grounding.md  CONCEPT_reality-constraint-compiler.md  COURSE_OUTLINE.md  IDEAS_activities.md  IDEAS_tinytalk-curriculum.md
nina/construct-studio/: README.md  __init__.py  __main__.py  cli.py  core.py  engine.py  examples.py  ledger.py
nina/core/: __init__.py  audit.py  bridge.py  chatbot_compiler.py  constraint_extractor.py  frame_generator.py  game_cartridges.py  grounding.py  gumroad.py  ledger.py  merkle_anchor.py  negotiator.py  newton_os.rb  newton_tahoe.rb  ollama_extractor.py  policy_engine.py  qap.py  robust.py  shell.py  textgen.py  typed_dictionary.py  vault.py  vault_client.py  voice_interface.py
nina/demo/: README_teachers_aide.md  adanpedia_adapter.py  client_example.py  damian-neveaux.html  kinematic-lyrics.html  teachers_aide_service.py  teachers_aide_service_simple.py  tmp_post.py
nina/deploy/: docker-compose.yml
nina/docs/: API-WIREFRAME.md  CS_THEORY_MAPPING.md  HELLO_WORLD.md  HIDDEN_ROAD_CS_ANALYSIS.md  HIDDEN_ROAD_MARKET_ANALYSIS.md  INTERFACE_BUILDER_GUIDE.md  INTRO_COURSE.md  NEWTON_CLP_SYSTEM_DEFINITION.md  NEWTON_GAME_ENGINE_GUIDE.md  NEWTON_ON_ACID.md  NEWTON_STEVE_JOBS_CRYSTALLIZATION.md  NEWTON_WORKSTATION.md  README.md  THE_SHAPE_OF_VERIFICATION.md  WWDC_PREPARATION.md  api-reference.md  authentication.md  configuration.md  getting-started.md  grounding.md  newton-gui-design-guide.md  suddenly-i-see.md  textgen.md
nina/examples/: HyperCard.swift  HyperCard2026.swift  gradebook_demo.py  nes_helper_demo.py  newton_full_demo.py  pda_level2.py  pda_level4.py  tinytalk_demo.py
nina/foghorn/: APPLE_HIG_2025_INSTRUCTIONS.md  cyberdog_server.py  opendoc.py
nina/foundation/: FOUNDATION_ORIGINAL.md  FOUNDATION_VERIFIED.md  README.md
nina/frontend/: _headers  _redirects  index.html  manifest.json
nina/gumroad/: README.md  build_shortcut.py
nina/interface-builder/: _redirects
nina/ios/: README.md
nina/jester-analyzer/: README.md  app.js  index.html  manifest.json  styles.css  wrangler.toml
nina/ledger/: sovereign_ledger.jsonl
nina/legacy/: Gemfile  adapter_universal.rb  newton_api.rb  newton_dashboard.html  newton_public.py
nina/mission-control/: README.md  config.js  index.html
nina/newton/: README.md  __init__.py  calculator.py  constraints.py  core.py  decorators.py  logic.py  setup.py  stress_test.py  types.py
nina/newton-image/: main.py
nina/newton-os/: index.html  index.ts  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
nina/newton-os-py/: README.md  main.py
nina/newton-phone/: README.md  _redirects  index.html  render.yaml
nina/newton-trace-engine/: CS_FOUNDATIONS.md
nina/newton.r/: DESCRIPTION  LICENSE
nina/newton_agent/: README.md  __init__.py  embeddings.py  embeddings_demo.py  knowledge_base.py  llm_ollama.py  meta_newton.py  semantic_resolver.py  server.py  test_homework.py  ti_calculator.py
nina/newton_core/: Cargo.toml  README.md
nina/newton_geometry/: README.md  __init__.py  geometric_lint.py  graph.py  hypergraph.py  lattice.py  manifold.py  polytope.py  simplex.py  topology.py
nina/newton_sdk/: __init__.py  cli.py  client.py
nina/newton_tlm/: README.md  __init__.py  atom.py  invariant.py  ledger_entry.py  paradox.py  phases.py  reversibility.py  tlm.py  transaction.py
nina/nina/: ARCHITECTURE.md  __init__.py  server.py
nina/papers/: KINEMATIC_SEMANTICS.md
nina/parccloud/: __init__.py  auth.py  index.html
nina/parcstation/: StationReadMe.md  TessTa.md  app.js  app2.js  cartridges.py  contract_test.py  index.html  index2.html  notebook.js  parcstation.css  server.py  smoke.py  style.css  test.py  test_acid.py  test_all.py  test_cartridges.py  test_complete.py.disabled  test_frontend_cartridge_integration.py  test_logic.py.disabled  test_parcstation.py  test_ui.py  (+3 more)
(+1071 files in other folders)
