[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newton-sdk"
version = "1.2.0"
description = "Newton Supercomputer SDK - Verified computation and tinyTalk constraint language"
readme = "README.md"
license = {text = "Commercial"}
requires-python = ">=3.9"
authors = [
    {name = "Jared Lewis Conglomerate"}
]
keywords = ["verification", "constraints", "computation", "tinytalk", "newton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
    "googlesearch-python>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
]
all = [
    "newton-sdk[dev]",
]

[project.scripts]
newton = "newton_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/jaredlewiswechs/Newton-api"
Documentation = "https://github.com/jaredlewiswechs/Newton-api/blob/main/README.md"
Repository = "https://github.com/jaredlewiswechs/Newton-api"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["newton*", "newton_sdk*", "tinytalk_py*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]
