[package]
name = "newton_core"
version = "0.1.0"
edition = "2021"
authors = ["Newton Team"]
description = "Newton Constraint Logic Processor - Mathematical bedrock for Aid-a"
license = "MIT"
repository = "https://github.com/Newton-api/newton_core"
keywords = ["constraints", "projection", "optimization", "verification"]
categories = ["algorithms", "mathematics"]

[lib]
name = "newton_core"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "projection_bench"
harness = false

[[bench]]
name = "candidate_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
