[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newton-computer"
version = "1.0.0"
description = "Newton Supercomputer - Verified computation with the TinyTalk constraint language"
readme = "README.md"
license = {text = "Commercial"}
requires-python = ">=3.9"
authors = [
    {name = "Jared Lewis Conglomerate"}
]
maintainers = [
    {name = "Jared Lewis Conglomerate"}
]
keywords = [
    "verification",
    "constraints",
    "computation",
    "tinytalk",
    "newton",
    "ai-safety",
    "formal-verification",
    "type-safety",
    "constraint-programming",
    "verified-computation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# Minimal dependencies for client-only use
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
# Server dependencies for running Newton locally
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
]

# Grounding (fact-checking with web search)
grounding = [
    "googlesearch-python>=1.2.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.92.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

# Full installation with everything
all = [
    "newton-computer[server,grounding,dev,docs]",
]

[project.scripts]
newton = "newton.cli:main"

[project.urls]
Homepage = "https://github.com/jaredlewiswechs/Newton-api"
Documentation = "https://github.com/jaredlewiswechs/Newton-api/blob/main/TINYTALK_PROGRAMMING_GUIDE.md"
Repository = "https://github.com/jaredlewiswechs/Newton-api"
Changelog = "https://github.com/jaredlewiswechs/Newton-api/blob/main/CHANGELOG.md"
Issues = "https://github.com/jaredlewiswechs/Newton-api/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["newton*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
